Traces : fix stats lines

--- a/web/src/scss/_traces.scss
+++ b/web/src/scss/_traces.scss
@@ -202,6 +202,12 @@
 	right:0;
 }
 
+.traces-left-stats .line {
+	background: #4C565D;
+	margin-left: 45px;
+	height: 4px;
+}
+
 .traces-right {
 	background:url(/img/traces/bg-traces-right.png) left top no-repeat;
 	float:right;
