--- a/web/src/scss/_fights.scss
+++ b/web/src/scss/_fights.scss
@@ -585,6 +585,15 @@
 	}
 }
 
+.sky {
+	@include scenery;
+	z-index:4;
+	.clouds-2, .clouds-3 {
+		top: 55px;
+		// left: 383px;
+	}
+}
+
 .background {
 	@include scenery;
 	z-index:5;
@@ -672,7 +681,7 @@
 	}
 }
 
-@each $plan in background, middleground, foreground, forescape {
+@each $plan in sky, background, middleground, foreground, forescape {
 	@for $i from 0 through 7 {
 		@for $j from 0 through 7 {
 			.step-#{$j} .#{$plan} .step-#{$i} {
@@ -918,6 +927,7 @@ a.traces {
 .results td {
 	border-bottom:1px dotted #000;
 	color:#53575A;
+	font-weight: bold;
 	font:400 14px/1.3 'Lato', Verdana, Arial, sans-serif;
 	padding:5px;
 }
@@ -947,7 +957,6 @@ a.traces {
 
 .result_fighter .active {
 	color:#C1272D;
-	font-weight: bold;
 }
 
 .results .fighter_one, .results .fighter_two {
