--- a/web/src/scss/_colorbox.scss
+++ b/web/src/scss/_colorbox.scss
@@ -19,18 +19,11 @@
     Change the following styles to modify the appearance of Colorbox.  They are
     ordered & tabbed in a way that represents the nesting of the generated HTML.
 */
-#cboxOverlay{background:url(/img/colorbox/overlay.png) repeat 0 0;}
-#colorbox{outline:0;}
-    #cboxTopLeft{width:21px; height:21px; background:url(/img/colorbox/controls.png) no-repeat -101px 0;}
-    #cboxTopRight{width:21px; height:21px; background:url(/img/colorbox/controls.png) no-repeat -130px 0;}
-    #cboxBottomLeft{width:21px; height:21px; background:url(/img/colorbox/controls.png) no-repeat -101px -29px;}
-    #cboxBottomRight{width:21px; height:21px; background:url(/img/colorbox/controls.png) no-repeat -130px -29px;}
-    #cboxMiddleLeft{width:21px; background:url(/img/colorbox/controls.png) left top repeat-y;}
-    #cboxMiddleRight{width:21px; background:url(/img/colorbox/controls.png) right top repeat-y;}
-    #cboxTopCenter{height:21px; background:url(/img/colorbox/border.png) 0 0 repeat-x;}
-    #cboxBottomCenter{height:21px; background:url(/img/colorbox/border.png) 0 -29px repeat-x;}
-    #cboxContent{background:#fff; overflow:hidden;}
-        .cboxIframe{background:#fff;}
+#cboxOverlay{ background:#000; background: rgba(0, 0, 0, 0.5); }
+#colorbox{outline:0; border-radius:8px; }
+    #cboxTopLeft, #cboxTopRight, #cboxBottomLeft, #cboxBottomRight, #cboxMiddleLeft, #cboxMiddleRight, #cboxTopCenter, #cboxBottomCenter, { display:none; }
+    #cboxContent{background:#E7E8DF; margin:0; padding:0 75px; overflow:hidden;}
+        .cboxIframe{background:#E7E8DF;}
         #cboxError{padding:50px; border:1px solid #ccc;}
         #cboxLoadedContent{margin-bottom:28px;}
         #cboxTitle{position:absolute; bottom:4px; left:0; text-align:center; width:100%; color:#949494;}
@@ -41,14 +34,12 @@
         /* these elements are buttons, and may need to have additional styles reset to avoid unwanted base styles */
         #cboxPrevious, #cboxNext, #cboxSlideshow, #cboxClose {border:0; padding:0; margin:0; overflow:visible; width:auto; background:none; }
 
-        /* avoid outlines on :active (mouseclick), but preserve outlines on :focus (tabbed navigating) */
-        #cboxPrevious:active, #cboxNext:active, #cboxSlideshow:active, #cboxClose:active {outline:0;}
-
-        #cboxSlideshow{position:absolute; bottom:4px; right:30px; color:#0092ef;}
-        #cboxPrevious{position:absolute; bottom:0; left:0; background:url(/img/colorbox/controls.png) no-repeat -75px 0; width:25px; height:25px; text-indent:-9999px;}
-        #cboxPrevious:hover{background-position:-75px -25px;}
-        #cboxNext{position:absolute; bottom:0; left:27px; background:url(/img/colorbox/controls.png) no-repeat -50px 0; width:25px; height:25px; text-indent:-9999px;}
-        #cboxNext:hover{background-position:-50px -25px;}
-        #cboxClose{position:absolute; bottom:0; right:0; background:url(/img/colorbox/controls.png) no-repeat -25px 0; width:25px; height:25px; text-indent:-9999px;}
+        #cboxClose{position:absolute; top:1em; right:1em; background:url(/img/icon/bt-close.png) let top no-repeat; width:22px; height:22px; text-indent:100%; overflow:hidden; white-space:nowrap; }
         #cboxClose:hover{background-position:-25px -25px;}
+        #cboxLoadedContent h1 { display:block; margin:1em 0; padding:0; text-align:center; }
+        #cboxLoadedContent { color:#383C40; font:400 12px/1.3 'Lato', Verdana, Arial, sans-serif; }
+        #cboxLoadedContent h2 { color:#395877; font-size:14px; }
+        #cboxLoadedContent h3 { color:#383C40; font-size:12px; font-weight:bold; }
+        #cboxLoadedContent p { display:block; margin:0; padding:0 0 1em 0; }
+        #cboxLoadedContent a { color:#383C40; text-decoration:underline; }
 
