--- a/web/src/scss/_winners.scss
+++ b/web/src/scss/_winners.scss
@@ -552,7 +552,7 @@
 .podium .pos {
 	display:block;
 	float: left;
-	font:700 30px/1 'Lato', Verdana, Arial, sans-serif;
+	font:400 26px/1.2 'Oswald', Verdana, Arial, sans-serif;
 	height:43px;
 	margin:0 5px 0 0;
 	text-align:center;
