Gestion z-index des résultats des coureurs (Affichage des résultats - Duels)

--- a/web/src/scss/_fights.scss
+++ b/web/src/scss/_fights.scss
@@ -84,6 +84,10 @@
 // 	background-position:-380px 0;
 // }
 
+.step-7 .fighter_one.has_won.has_won_active, .step-7 .fighter_one.winner {
+	z-index:30;
+}
+
 .fight-start .fighter {
 	position: absolute;
 	margin:0;
