Modification "changer de coureur" - Duels

--- a/web/src/scss/_fights.scss
+++ b/web/src/scss/_fights.scss
@@ -216,14 +216,14 @@
 .choose-fighter {
 	background:#5F3001;
 	color:#F3F3ED;
-	font:700 12px/50px 'Oswald', Verdana, Arial, sans-serif;
+	font:700 12px/34px 'Oswald', Verdana, Arial, sans-serif;
 	display:block;
-	height:50px;
-	margin:0 0 0 30px;
+	height:34px;
+	margin:20px 0 0 58px;
 	padding:0;
 	text-align:center;
 	text-transform:uppercase;
-	width:200px;
+	width:148px;
 }
 
 .fight-container {
