--- a/web/src/scss/_streetview.scss
+++ b/web/src/scss/_streetview.scss
@@ -192,9 +192,10 @@
 #bodyContent p, #gmap-search p {
 	display:block;
 	color:#000;
-	font:normal 12px/1.3 'Lato', Arial, sans-serif;
+	font:normal 14px/1.3 'Lato', Arial, sans-serif;
 	margin:0;
 	padding:5px 0;
+	white-space: nowrap;
 }
 
 .displayStreetView, .displayHyperlapse {
