--- a/web/src/scss/_streetview.scss
+++ b/web/src/scss/_streetview.scss
@@ -225,8 +225,7 @@
     top: 150px;
     left: 320px;
     color: white;
-    font-size: 18px;
-
+    font:900 18px 'Lato', Arial, sans-serif;
 }
 
 
