--- a/web/src/scss/_traces.scss
+++ b/web/src/scss/_traces.scss
@@ -205,8 +205,10 @@
 
 .traces-left-stats .line {
 	background:#7691A5;
-	margin-left: 45px;
-	height: 4px;
+	display:block;
+	margin: -1px 0 0 45px;
+	padding:0;
+	height: 5px;
 }
 
 .traces-right {
