Fight : hide notice on load

--- a/web/src/scss/_fights.scss
+++ b/web/src/scss/_fights.scss
@@ -225,6 +225,9 @@
 	text-transform:uppercase;
 	width:148px;
 }
+.choose-fighter-notice {
+	display: none;
+}
 
 .fight-container {
 	background:none;
