--- a/web/src/scss/_winners.scss
+++ b/web/src/scss/_winners.scss
@@ -315,7 +315,7 @@
 	// background:url(/img/vainqueurs/left-slider.png) left top no-repeat;
 	background:url(/img/vainqueurs/slider.png) left top no-repeat;
 	position: absolute;
-	margin:0;
+	margin:0 0 0 -5px;
 	width: 30px;
 	height: 22px;
 	top:-5px;
