--- a/web/src/scss/_colorbox.scss
+++ b/web/src/scss/_colorbox.scss
@@ -36,7 +36,7 @@
 
         #cboxClose{position:absolute; top:.5em; right:.5em; background:url(/img/icon/bt-close.png) left top no-repeat; width:22px; height:22px; text-indent:100%; overflow:hidden; white-space:nowrap; }
         .colorbox-inner { height:300px; padding:0 50px 0 0; overflow:auto; }
-        .colorbox-inner h1 { display:block; margin:1em 0; padding:0; text-align:center; }
+        #cboxContent h1 { display:block; margin:1em 0; padding:0; text-align:center; }
         .colorbox-inner { color:#383C40; font:400 12px/1.3 'Lato', Verdana, Arial, sans-serif; }
         .colorbox-inner h2 { color:#395877; font-size:14px; }
         .colorbox-inner h3 { color:#383C40; font-size:12px; font-weight:bold; }
