--- a/web/src/scss/_fights.scss
+++ b/web/src/scss/_fights.scss
@@ -931,7 +931,7 @@ a.traces {
 	border-radius:8px;
 	border-collapse:collapse;
 	display:block;
-	margin:5px auto;
+	margin:25px auto 5px auto;
 	width:490px;
 }
 
@@ -942,8 +942,11 @@ a.traces {
 	font:400 14px/1.3 'Lato', Verdana, Arial, sans-serif;
 	padding:5px;
 }
+
 .results td.no-border, .results .last td {
+	border:none; 
 }
+
 .results .last .legend-results img {
 	margin-top: -30px;
 	margin-bottom: -20px;
@@ -1065,7 +1068,7 @@ a.traces {
 }
 
 .results .close {
-	top: 1em;
+	top: 2em;
 	left: 50%;
 	margin-left: 210px;
 }
