--- a/web/src/scss/_fights.scss
+++ b/web/src/scss/_fights.scss
@@ -67,7 +67,7 @@
 }
 
 @each $step in 2,3,4,6,7,results {
-	.step-#{$step} .fighter_one.yellow.yellow_active, .step-#{$step} .fighter_one.yellow.yellow_active {
+	.step-#{$step} .fighter_one.yellow.yellow_active, .step-#{$step} .fighter_two.yellow.yellow_active {
 		background-position:-190px 0;
 	}
 }
@@ -386,7 +386,7 @@
 
 .fighter-infos {
 	background:#e3e7ea;
-    padding: 8px;
+    padding: 6px;
     border-radius: 4px;
     box-shadow: 0 0 7px rgba(0,0,0,.5);
     position:absolute;
@@ -441,6 +441,10 @@
 	margin-left: -500px;
 }
 
+.step-5 .fighter_one .fighter-infos {
+	top:-50px;
+}
+
 .step-7 .fighter_one .fighter-infos, .step-results .fighter_one .fighter-infos {
 	top:-150px;
 }
@@ -465,10 +469,10 @@
 .fighter-infos .name, .fighter-infos .result {
 	color:#393932;
 	display:block;
-	font:400 18px/1.3 'Oswald', Verdana, Arial, sans-serif;
+	font:400 16px/1.3 'Oswald', Verdana, Arial, sans-serif;
 	margin:0;
 	padding:0;
-	text-transform: uppercase;
+	// text-transform: uppercase;
 	// white-space:nowrap;
 }
 
@@ -615,7 +619,7 @@
 		// left: 383px;
 	}
 	.beef-car {
-		top: 127px;
+		top: 137px;
 		// left: 383px;
 	}
 	.radar {
@@ -633,7 +637,7 @@
 	left: -300px;
 	z-index:7;
 	.followers {
-		top: 265px;
+		top: 237px;
 		// left: 383px;
 	}
 }
@@ -675,7 +679,7 @@
 		bottom: 0px;
 	}
 	.trees-4 {
-		bottom: 0px;
+		bottom: -10px;
 	}
 	.trees-5 {
 		bottom: -10px;
@@ -948,7 +952,7 @@ a.traces {
 }
 
 .results td.no-border, .results .last td {
-	border:none; 
+	border:none;
 }
 
 .results .last .legend-results img {
