add jcarousellite, placeholder, fix fight anims

--- a/web/src/scss/_fights.scss
+++ b/web/src/scss/_fights.scss
@@ -640,6 +640,10 @@
 		top: 237px;
 		// left: 383px;
 	}
+	.doping-doctor {
+		top: 137px;
+		// left: 383px;
+	}
 }
 
 .foreground {
@@ -658,6 +662,9 @@
 	.yellow-car {
 		top: 200px;
 		// left: 383px;
+	}
+	.green-3 {
+		top: 400px;
 	}
 }
 
@@ -948,7 +955,7 @@ a.traces {
 
 .results td.result_fighter {
 	color:#6289A7;
-	font:700 15px/1.3 'Oswald', Verdana, Arial, sans-serif;	
+	font:700 15px/1.3 'Oswald', Verdana, Arial, sans-serif;
 }
 
 .results td.no-border, .results .last td {
