--- a/web/src/scss/_streetview.scss
+++ b/web/src/scss/_streetview.scss
@@ -273,9 +273,5 @@
     left: 27px;
     top: 0px;
     background: url(/img/lieux/lieux_hyperlapse_pointer.png) no-repeat;
-    background-position: center center
-
-
+    background-position: center center;
 }
-
-
