--- a/web/src/scss/_traces.scss
+++ b/web/src/scss/_traces.scss
@@ -170,7 +170,8 @@
 
 .traces-left-stats small {
 	color:#4C565D;
-	display:none;
+	display:block;
+	visibility: hidden;
 	font:400 11px/1.1 'Lato', Verdana, Arial, sans-serif;
 	margin:0;
 	padding:0;
