--- a/web/src/scss/_streetview.scss
+++ b/web/src/scss/_streetview.scss
@@ -253,6 +253,7 @@
     left: 285px;
     color: white;
     font:600 14px/1.3 'Lato', Arial, sans-serif;    
+    display: none;
 }
 
 #hyperlapseTimeline .loader{
