--- a/web/src/scss/_streetview.scss
+++ b/web/src/scss/_streetview.scss
@@ -142,6 +142,12 @@
 	font:normal 14px/1.3 'Lato', Arial, sans-serif;
 }
 
+.hyperlapse-desc {
+	font:normal 12px/1.1 'Lato', Arial, sans-serif;
+	position: absolute;
+	top: 240px;
+	padding: 0 3px;
+}
 
 
 #minimap{
@@ -252,7 +258,7 @@
     top: -20px;
     left: 285px;
     color: white;
-    font:600 14px/1.3 'Lato', Arial, sans-serif;    
+    font:600 14px/1.3 'Lato', Arial, sans-serif;
     display: none;
 }
 
@@ -276,3 +282,5 @@
     background: url(/img/lieux/lieux_hyperlapse_pointer.png) no-repeat;
     background-position: center center;
 }
+
+
