--- a/web/src/scss/_streetview.scss
+++ b/web/src/scss/_streetview.scss
@@ -195,7 +195,6 @@
 	font:normal 14px/1.3 'Lato', Arial, sans-serif;
 	margin:0;
 	padding:5px 0;
-	white-space: nowrap;
 }
 
 .displayStreetView, .displayHyperlapse {
@@ -220,7 +219,6 @@
 	background:#93C403;
 }
 
-
 #hyperlapseTextLoader{
     position: absolute;
     top: 150px;
@@ -229,13 +227,11 @@
     font:900 18px 'Lato', Arial, sans-serif;
 }
 
-
 #btnCloseHyperlapse{
     position: absolute;
     top: 10px;
     right: 10px;
 }
-
 
 #hyperlapseTimeline{
     position: absolute;
@@ -247,7 +243,7 @@
     background: url(/img/lieux/lieux_hyperlapse_timeline.png) no-repeat;
 }
 
-#hyperlapseTimeline .aide{
+#hyperlapseTimeline .aide {
     position: absolute;
     top: -20px;
     left: 285px;
@@ -274,4 +270,63 @@
     top: 0px;
     background: url(/img/lieux/lieux_hyperlapse_pointer.png) no-repeat;
     background-position: center center;
+}
+
+.infoBox {
+    background:#E3E7EA;
+    border-radius:4px;
+    box-shadow: 0 0 7px rgba(0, 0, 0, 0.5);
+    padding: 6px;
+}
+
+.infobox-arrow {
+    width: 70px;
+    height: 16px;
+    overflow: hidden;
+    position: absolute;
+    left: 50%;
+    margin-left: -35px;
+    bottom: -10px;
+  }
+
+.infobox-arrow:after {
+	background:#e3e7ea;
+    content: "";
+    position: absolute;
+    left: 20px;
+    bottom:4px;
+    width: 25px;
+    height: 25px;
+    box-shadow: 6px 5px 9px -9px black;
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    tranform: rotate(45deg);
+}
+
+.infobox-arrow-white {
+    width: 70px;
+    height: 16px;
+    overflow: hidden;
+    position: absolute;
+    left: 50%;
+    margin-left: -35px;
+    bottom: -10px;
+  }
+
+.infobox-arrow-white:after {
+	background:#fff;
+    content: "";
+    position: absolute;
+    left: 20px;
+    bottom:4px;
+    width: 25px;
+    height: 25px;
+    box-shadow: 6px 5px 9px -9px black;
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    tranform: rotate(45deg);
 }
