--- a/web/src/scss/_streetview.scss
+++ b/web/src/scss/_streetview.scss
@@ -8,8 +8,11 @@
 	padding:0;
 	width:258px;
 	overflow: hidden;
-        position: relative;
+    position: relative;
+    z-index:2;
+ 	box-shadow:12px 0 15px -4px rgba(0, 0, 0, 0.3);
 }
+
 .streetview-left .container {
 	width: 600px;
 	position: relative;
@@ -27,9 +30,9 @@
 	overflow: auto;
 }
 .streetview-left .detail {
-        position: relative;
+    position: relative;
 	width:258px;
-        height: 500px;
+	height: 500px;
 	float: left;
 }
 
