Suppression pre-render recherche + ajout border left sur traces right

--- a/web/src/scss/_traces.scss
+++ b/web/src/scss/_traces.scss
@@ -214,8 +214,9 @@
 
 .traces-right {
 	background:url(/img/traces/bg-traces-right.png) left top no-repeat;
+	border-left:1px solid #fff;
 	float:right;
-	width:239px;
+	width:238px;
 }
 
 .winner-status {
