--- a/web/src/scss/styles.scss
+++ b/web/src/scss/styles.scss
@@ -28,6 +28,7 @@ img { border: 0; }
 	margin:0 auto;
 	padding:0;
 	width:1000px;
+	min-height: 500px;
 	box-shadow: 12px 0 15px -4px rgba(0, 0, 0, 0.3), -12px 0 8px -4px rgba(0, 0, 0, 0.3);
 }
 
