--- a/web/src/scss/_selectbox.scss
+++ b/web/src/scss/_selectbox.scss
@@ -12,7 +12,7 @@
 	text-align:left;
 	position:relative;
 	width:205px;
-	z-index:12;
+	z-index:90;
 }
 
 .sbSelector {
@@ -62,10 +62,11 @@
 	width: 100%;
 	max-height:250px !important;
 	overflow:auto;
-	z-index: 1;
+	z-index: 90;
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
+	-webkit-overflow-scrolling: touch;
 }
 
 .sbOptions a {
@@ -92,29 +93,3 @@
 	color: #c2a56f;
 }
 
-/*
-.ui-autocomplete {
-	background:#fff;
-	border:8px solid #fff;
-	border-radius:8px;
-	outline:0;
-	list-style-type:none;
-	height:200px;
-	overflow:auto;
-	margin:0;
-	padding:0;
-	width:224px;
-	display:block !important;
-}
-
-.ui-menu-item {
-	border-bottom:1px solid #93AAC5;
-	clear:both;
-	cursor:pointer;
-	display:block;
-	color:#93AAC5;
-	font:400 14px/1.3 'Lato', Verdana, Arial, sans-serif;
-	margin:0 8px 0 0;
-	padding:3px 0;
-}
-*/
