Changement icone etape + calges divers

--- a/web/src/scss/_winners.scss
+++ b/web/src/scss/_winners.scss
@@ -234,7 +234,7 @@
 	height: 225px;
 	border:1px dashed #fff;
 	border-top:none;
-	border-right:none;
+	border-left:none;
 	vertical-align:top;
 	text-align:center;
 }
