update image with shadow

--- a/web/src/scss/_streetview.scss
+++ b/web/src/scss/_streetview.scss
@@ -291,12 +291,12 @@
 }
 
 .infobox-arrow {
-	background:url(/img/icon/arrow-grey.png) left top no-repeat;
-    width: 12px;
+	background:url(/img/icon/arrow-grey-shadow.png) left top no-repeat;
+    width: 20px;
     height: 24px;
     overflow: hidden;
     position: absolute;
-    left:-12px;
+    left:-20px;
     top:5px;
 }
 
