Winners : no result msg

--- a/web/src/scss/_winners.scss
+++ b/web/src/scss/_winners.scss
@@ -213,6 +213,10 @@
 	margin-bottom: 120px;
 }
 
+.winners_list .no-results {
+	display: none;
+}
+
 .winners footer {
 	position: fixed;
 	bottom: 0;
