Calages éléments sur vainqueurs pour IE < 9

--- a/web/src/scss/_fights.scss
+++ b/web/src/scss/_fights.scss
@@ -233,6 +233,7 @@
 .choose-fighter-notice {
 	background:none;
 	display: none;
+	white-space:nowrap;
 }
 
 .fight-container {
@@ -242,7 +243,6 @@
 	height:500px;
 	width: 1000px;
 	position:relative;
-	// z-index:7;
 	overflow: hidden;
 }
 
