Modification calage bulle lieux mythiques

--- a/web/src/scss/_streetview.scss
+++ b/web/src/scss/_streetview.scss
@@ -300,6 +300,10 @@
     top:5px;
 }
 
+#contentInfo .infobox-arrow {
+	top:55px;
+}
+
 .infobox-arrow-white {
 	background:url(/img/icon/arrow-white.png) left top no-repeat;
     width: 8px;
