Modif hover footer, update image methodo, modifs taille texte methodo

--- a/web/src/scss/_footer.scss
+++ b/web/src/scss/_footer.scss
@@ -33,6 +33,10 @@ footer {
 	font:400 9px/41px 'Lato', Verdana, Arial, sans-serif;
 }
 
+.footer-links a:hover {
+	color:#fff;
+}
+
 #addthis-share {
 	padding:12px 0 0 0;
 }
