--- a/web/src/scss/_traces.scss
+++ b/web/src/scss/_traces.scss
@@ -36,7 +36,7 @@
 
 .traces .timeline-zoom {
 	overflow: hidden;
-	margin:10px auto 0 auto;
+	margin:10px 0 0 60px;
 	padding: 0;
 	width: 720px;
 	height: 40px;
