--- a/web/src/scss/_winners.scss
+++ b/web/src/scss/_winners.scss
@@ -1,6 +1,6 @@
 #winner {
 	display:none;
-	height:215px;
+	height:225px;
 	background:url(/img/vainqueurs/bg-winner-block.png) left top no-repeat #F2F2ED;
 	position:relative;
 	z-index:1;
@@ -348,8 +348,10 @@
 .top-winner-portrait .portrait {
 	display:block;
 	float:left;
+	height:200px;
 	margin: 0;
 	padding: 0;
+	width:auto;
 }
 
 .top-winner-portrait-body {
