--- a/web/src/scss/_tooltips.scss
+++ b/web/src/scss/_tooltips.scss
@@ -10,6 +10,7 @@
     box-shadow: 0 0 7px rgba(0,0,0,.5);
     width: 100px;
     text-align:center;
+    position:fixed !important;
   }
   .arrow {
     width: 70px;
