Tracés - Modification hover si opaque

--- a/web/src/scss/_traces.scss
+++ b/web/src/scss/_traces.scss
@@ -464,6 +464,10 @@
 	background-position:-153px 0;
 }
 
+#start-pause.opaque:hover {
+	background-position:0 0;
+}
+
 #start-pause.opaque {
 	opacity:.5;
 }
