Vainqueurs - Gestion affichage victoires Eddy Merckx

--- a/web/src/scss/_winners.scss
+++ b/web/src/scss/_winners.scss
@@ -99,11 +99,11 @@
 	text-indent: 100%;
 	white-space:nowrap;
 }
-/*
-.winners #winner .tours .wins div:nth-child(6), .winners #winner .tours .wins div:nth-child(7), .winners #winner .tours .wins div:nth-child(8), .winners #winner .tours .wins div:nth-child(9) {
-	display:none;
+
+.winners #winner .tours .wins .eddy-merckx {
+	margin-top:1px;
 }
-*/
+
 .winners #winner .tours .bulle {
 	display: none;
 }
