--- a/web/src/scss/_traces.scss
+++ b/web/src/scss/_traces.scss
@@ -257,6 +257,13 @@
 	white-space:nowrap;
 }
 
+.traces-right .no-winner {
+	font-size:20px;
+	line-height:1.3;
+	margin:-5px 0 0 0;
+	text-align:center;
+}
+
 .traces-right .name a {
 	background:url(/img/traces/traces_vainqueur_more_off.png) 100% 0 no-repeat;
 	color:#383C40;
