Duel - Calage bloc winners list

--- a/web/src/scss/_winners.scss
+++ b/web/src/scss/_winners.scss
@@ -209,6 +209,10 @@
 	margin-bottom: 120px;
 }
 
+.fight-home .winners .winners_list {
+	margin:0;
+}
+
 .winners_list .no-results {
 	display: none;
 	text-align: center;
