--- a/web/src/scss/_winners.scss
+++ b/web/src/scss/_winners.scss
@@ -27,7 +27,7 @@
 	font:700 13px 'Lato', Verdana, Arial, sans-serif;
 }
 
-#winner .tours li.pos-Non-partant a {
+#winner .tours li.pos-Non-partant span {
 	visibility:hidden;
 }
 
@@ -36,7 +36,7 @@
 	color:#D9D9D4;
 }
 
-#winner .tours a {
+#winner .tours span {
 	position:absolute;
 	left:3px;
 	margin: 0;
@@ -47,9 +47,8 @@
 	font:700 13px 'Lato', Verdana, Arial, sans-serif;
 }
 
-#winner .tours .pos-1 a {
+#winner .tours .pos-1 span {
 	left:0;
-	display:block;
 	display:block;
 	overflow:hidden;
 	margin:-11px 0 0 3px;
@@ -64,7 +63,7 @@
 	white-space:nowrap;
 }
 
-#winner .tours .pos-Elimine a {
+#winner .tours .pos-Elimine span {
 	border:none;
 	color:#DC0A27;
 }
@@ -77,7 +76,6 @@
 	display:block;
 	margin:0;
 	padding: 0;
-
 	position: absolute;
 	bottom:28px;
 	display:block;
