--- a/web/src/index.jade
+++ b/web/src/index.jade
@@ -70,8 +70,7 @@ html.no-js(lang='fr', dir='ltr')
       #template-home.template
         .home-inner
           h1.visuallyhidden
-            a(href='/')
-              | Tour de France, Radio France, tracés, lieux mythiques, cols, étapes, vainqueurs, coureurs de légende, maillot jaune
+            a(href='/')= post.h1
           .home-search.home-block
             .carrousel-home-search
               #carrousel-home-search-inner.carrousel-home-search-inner
