--- a/web/src/index.jade
+++ b/web/src/index.jade
@@ -543,6 +543,9 @@ html.no-js(lang='fr', dir='ltr')
         // .footer-radios
       // #footer
     script(language='JavaScript', src='http://prof.estat.com/js/279079202460.js')
+    noscript
+      img(src='http://stat3.cybermonitor.com/sites-evenementiels_v?c=100_tours_de_france&p=homepage&l3=homepage&l4=homepage&st=0&sjs=0', border='0', width='1', height='1')
+
     script(type='text/javascript', src='http://oblique.radiofrance.fr/files/xtcore.js')
     script
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
